[package]
name = "hyper-fahrenheit"
version = "0.1.1"
authors = ["Alexander Polakov <a.polakov@iconic.vc>"]
edition = "2018"
description = "Fahrenheit adapter for hyper"
license = "MIT"
documentation = "https://docs.rs/hyper-fahrenheit"
repository = "https://github.com/polachok/hyper-fahrenheit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fahrenheit = "4.5"
futures-io = "0.3"
futures-util = "0.3"
hyper = { version = "0.13", default_features = false }
tokio = { version = "0.2", default_features = false }
